--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
+        <meta charset="utf-8">
 	</head>
+
 	<body>
-<h1>Привіт!</h1>
+	<h1>Hello, world!</h1>
+        <h1>РџСЂРёРІС–С‚!</h1>
 	</body>
 
 </html>
