--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 	</head>
 
 	<body>
+<div class="intro">		
+	<div class="container">
 	<h1>Hello, world!</h1>
         <h1>Привіт!</h1>
+	</div>
+</div>	
 	</body>
 
 </html>
