--- a/index.html
+++ b/index.html
@@ -1,19 +1,59 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<link rel="stylesheet" href="style.css">
-		<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
 		
-	</head>
+		
+	<script>
+	function digitalClock() {
+    var date = new Date();
+    var hours = date.getHours();
+    var minutes = date.getMinutes();
+    var seconds = date.getSeconds();
+       //* добавление ведущих нулей */
+      if (hours < 10) hours = "0" + hours;
+      if (minutes < 10) minutes = "0" + minutes;
+      if (seconds < 10) seconds = "0" + seconds;
+        document.getElementById("id_clock").innerHTML = hours + ":" + minutes + ":" + seconds;
+        setTimeout("digitalClock()", 10);
+     }
+     </script>
+  
+</head>
 
-	<body>
-<div class="intro">		
+<body>
+<header class="header">
 	<div class="container">
-	<h1>Hello, world!</h1>
-        <h1>Привіт!</h1>
+		<div class="header_inner">
+			<div class="header_logo">LoGo</div>
+			
+			<div  class="header_time">
+			<div id="id_clock"></div>
+			<script>digitalClock();</script>
+			</div>
+			
+			<nav class="nav">
+				<a class="nav_link" href="#">About</a>
+				<a class="nav_link" href="#">Work</a>
+				<a class="nav_link" href="#">Contact</a>
+			</nav>
+		</div>
 	</div>
+</header>
+
+<div class="intro">		
+		<div class="container">
+			<h1>Hello, world!</h1>
+			<h1>Привіт!</h1>
+		</div>
 </div>	
-	</body>
+
+
+
+
+</body>
 
 </html>
