--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="header_logo">LoGo</div>
 			
 			<div  class="header_time">
-			<div id="id_clock"></div>
+			<div id="id_clock" class="time"></div>
 			<script>digitalClock();</script>
 			</div>
 			
